# incident-measure-result-dataset

./: .gitattributes  .gitignore  DATA_NOTICE.md  LICENSE  README.md  README_RU.MD  pyproject.toml
benchmarks/: baselines_v1.json
data/: README.md
data/annotations/llm_panel/: annotator_a.jsonl  annotator_b.jsonl  annotator_c.jsonl  annotator_d.jsonl  annotator_e.jsonl
data/annotations/subagent_annotations/: annotator_a.jsonl  annotator_b.jsonl  annotator_c.jsonl  annotator_d.jsonl  annotator_e.jsonl
data/dataset/: adjudication_decisions.jsonl  agreement_report.json  agreement_report.md  attack_defense_mappings.jsonl  coverage_report.json  eval_manifest.json  leakage_report.json  measure_corpus.jsonl  queries.jsonl  relevance_annotations.jsonl  sources.jsonl
data/external_gold_seed_8_8_35/: external_attack_defense_mappings.jsonl  external_coverage_report.json  external_eval_manifest.json  external_leakage_report.json  external_relevance_annotations.jsonl  external_sources.jsonl  gold_adjudication_decisions.jsonl  gold_agreement_report.json  gold_agreement_report.md
data/review_audit/: review_queue.jsonl  sampling_audit.jsonl
data/review_seed/: gold_candidate_review_queue.jsonl  gold_candidate_sampling_audit.jsonl
docs/: ANNOTATION_PROTOCOL.md  BASELINES.md  DATASET_CARD.md  EVALUATION_GUIDE.md  PROVENANCE.md  SCHEMA.md  SOURCES_AND_LICENSES.md
scripts/: evaluate.py  rank_bm25.py  rank_embeddings.py  validate_dataset.py
src/incident_measure_result/: __init__.py  cli.py  io.py  metrics.py  rankers.py  validation.py
tests/: test_dataset_package.py
