[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-measure-result-dataset"
version = "0.1.0"
description = "Gold-candidate incident-to-measure relevance dataset with ranking utilities."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Incident Measure Result Dataset Maintainers" }]
keywords = ["cybersecurity", "incident-response", "ranking", "dataset", "relevance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
embeddings = [
  "sentence-transformers>=2.7.0",
  "numpy>=1.24",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
incident-measure-result = "incident_measure_result.cli:main"

[tool.setuptools.packages.find]
where = ["src"]